status-bar update
status-bar and some updates

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Welcome to Kokoa Clone</title>
+        <title>Welcome to StarTalk</title>
     </head>
     <body>
         <div class="status-bar">
@@ -24,17 +24,18 @@
         </div>
 
         <header class="welcome-header">
-            <h1 class="welcome-header__title">Welcome to Kokoa Clone</h1>
+            <h1 class="welcome-header__title">Welcome to StarTalk</h1>
             <p class="welcome-header__text">
-                If you have a Kokoa Account, log in with your email or phone number.
+                If you have a Star Account, log in with your email or phone number.
             </p>
         </header>
 
         <form id="login-form">
             <input type="text" placeholder="Email or phone number" />
             <input type="password" placeholder="Password" />
-            <input type="submit" value="Log in " />
-            <a href="#">Find Kokoa Account or Password</a>
+            <input type="submit" value="Log in" />
+            <input type="submit" value="Sign Up" />
+            <a href="#">Find Star Account or Password</a>
         </form>
 
 
