--- a/friends.html
+++ b/friends.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Welcome to CelebTalk</title>
+        <title>Friends - CelebTalk</title>
     </head>
     <body>
         <div class="status-bar">
@@ -22,22 +22,23 @@
                 <i class="fas fa-bolt"></i>
             </div>
         </div>
-
-        <header class="welcome-header">
-            <h1 class="welcome-header__title">Welcome to CelebTalk</h1>
-            <p class="welcome-header__text">
-                If you have a Celeb Account, log in with your email or phone number.
-            </p>
-        </header>
-
-        <form action="friends.html" method="get" id="login-form">
-            <input name="username" type="text" placeholder="Email or phone number" />
-            <input name="password" type="password" placeholder="Password" />
-            <input type="submit" value="Log In" />
-            <input type="submit" value="Sign Up" />
-            <a href="#">Find Celeb Account or Password</a>
-        </form>
-
+        
+        <nav class="nav">
+            <ul class="nav__list">
+                <li class="nav__btn">
+                    <a class="nav__link" href="friends.html"><i class="fas fa-user fa-lg"></i></a>
+                </li>
+                <li class="nav__btn">
+                    <a class="nav__link" href="#"><i class="far fa-comment fa-lg"></i></a>
+                </li>
+                <li class="nav__btn">
+                    <a class="nav__a" href="#"><i class="fas fa-search fa-lg"></i></a>
+                </li>
+                <li class="nav__btn">
+                    <a class="nav__a" href="#"><i class="fas fa-ellipsis-h fa-lg"></i></a>
+                </li>
+            </ul>
+        </nav>
 
         <script
         src="https://kit.fontawesome.com/6478f529f2.js"
