--- a/friends.html
+++ b/friends.html
@@ -26,16 +26,22 @@
         <nav class="nav">
             <ul class="nav__list">
                 <li class="nav__btn">
-                    <a class="nav__link" href="friends.html"><i class="fas fa-user fa-lg"></i></a>
+                    <a class="nav__link" href="friends.html"><i class="fas fa-user fa-2x"></i></a>
                 </li>
                 <li class="nav__btn">
-                    <a class="nav__link" href="#"><i class="far fa-comment fa-lg"></i></a>
+                    <a class="nav__link" href="#">
+                        <span class="nav__notification">18</span>
+                        <i class="far fa-comment fa-2x"></i>
+                    </a>
                 </li>
                 <li class="nav__btn">
-                    <a class="nav__a" href="#"><i class="fas fa-search fa-lg"></i></a>
+                    <a class="nav__link" href="#"><i class="fas fa-search fa-2x"></i></a>
                 </li>
                 <li class="nav__btn">
-                    <a class="nav__a" href="#"><i class="fas fa-ellipsis-h fa-lg"></i></a>
+                    <a class="nav__link" href="#">
+                        <span class="nav__new-notification"></span>
+                        <i class="fas fa-ellipsis-h fa-2x"></i>
+                    </a>
                 </li>
             </ul>
         </nav>
