--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
             <a href="#">Find Celeb Account or Password</a>
         </form>
 
+        <div id="no-mobile">
+            <span>Your screen is too big ㅠㅠ</span>
+        </div>
+
+        <di id="no-landscape">
+            <span>rotate your screen</span>
+        </div>
 
         <script
         src="https://kit.fontawesome.com/6478f529f2.js"
